--- a/desigion_trees/main.ipynb
+++ b/desigion_trees/main.ipynb
@@ -2,38 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3 7.25 22.0 1 0]\n",
-      " [1 71.2833 38.0 0 1]\n",
-      " [3 7.925 26.0 0 1]\n",
-      " ..., \n",
-      " [1 30.0 19.0 0 1]\n",
-      " [1 30.0 26.0 1 1]\n",
-      " [3 7.75 32.0 1 0]]\n",
-      "[[3 7.25 22.0 1]\n",
-      " [1 71.2833 38.0 0]\n",
-      " [3 7.925 26.0 0]\n",
-      " ..., \n",
-      " [1 30.0 19.0 0]\n",
-      " [1 30.0 26.0 1]\n",
-      " [3 7.75 32.0 1]]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([ 0.14000522,  0.30343647,  0.2560461 ,  0.30051221])"
+       "array([ 0.30644165,  0.13700004,  0.2560461 ,  0.30051221])"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,14 +25,13 @@
     "import pandas\n",
     "\n",
     "data = pandas.read_csv('titanic.csv', index_col='PassengerId')\n",
-    "X = data[['Pclass', 'Fare', 'Age', 'Sex', 'Survived']].dropna(axis=0).as_matrix()\n",
+    "X = data[['Fare', 'Pclass', 'Age', 'Sex', 'Survived']].dropna(axis=0).as_matrix()\n",
     "X[X[:, 3] == 'female', 3] = 0\n",
     "X[X[:, 3] == 'male', 3] = 1\n",
     "survived = X[:, 4].astype(np.int64)\n",
-    "print X\n",
     "X = np.delete(X, [4], axis=1)\n",
-    "print X\n",
-    "    \n",
+    "\n",
+    "\n",
     "\n",
     "clf = DecisionTreeClassifier(random_state=241)\n",
     "clf.fit(X, survived)\n",
