github lfs added

--- a/classification_metrics/main.ipynb
+++ b/classification_metrics/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -11,12 +11,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1    102\n",
-      "0     98\n",
-      "Name: true, dtype: int64\n",
-      "0    123\n",
-      "1     77\n",
-      "Name: pred, dtype: int64\n"
+      "[[1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [1 1]]\n",
+      "tp = <64>, fp = <34>, fn = <59>, tn = <43>\n"
      ]
     }
    ],
@@ -25,8 +63,110 @@
     "import numpy as np\n",
     "\n",
     "data = pandas.read_csv('classification.csv')\n",
-    "print data['true'].value_counts()\n",
-    "print data['pred'].value_counts()"
+    "data = data.as_matrix()\n",
+    "\n",
+    "tp_array = data[data[:, 0] == 0]\n",
+    "tp_array = tp_array[tp_array[:, 1] == 0]\n",
+    "\n",
+    "fp_array = data[data[:, 0] == 0]\n",
+    "fp_array = fp_array[fp_array[:, 1] == 1]\n",
+    "\n",
+    "fn_array = data[data[:, 0] == 1]\n",
+    "fn_array = fn_array[fn_array[:, 1] == 0]\n",
+    "\n",
+    "tn_array = data[data[:, 0] == 1]\n",
+    "tn_array = tn_array[tn_array[:, 1] == 1]\n",
+    "\n",
+    "print tn_array\n",
+    "\n",
+    "print 'tp = <{}>, fp = <{}>, fn = <{}>, tn = <{}>'.format(len(tp_array), len(fp_array), len(fn_array), len(tn_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.54\n",
+      "0.56\n",
+      "0.42\n",
+      "0.48\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "print round(accuracy_score(data[:, 0], data[:, 1]), 2)\n",
+    "print round(precision_score(data[:, 0], data[:, 1]), 2)\n",
+    "print round(recall_score(data[:, 0], data[:, 1]), 2)\n",
+    "print round(f1_score(data[:, 0], data[:, 1]), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.72\n",
+      "0.71\n",
+      "0.64\n",
+      "0.69\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "data_scores = pandas.read_csv('scores.csv')\n",
+    "data_scores_matrix = data_scores.as_matrix()\n",
+    "y_true = np.array(data_scores_matrix[:, 0])\n",
+    "\n",
+    "print round(roc_auc_score(y_true, data_scores_matrix[:, 1]), 2)\n",
+    "print round(roc_auc_score(y_true, data_scores_matrix[:, 2]), 2)\n",
+    "print round(roc_auc_score(y_true, data_scores_matrix[:, 3]), 2)\n",
+    "print round(roc_auc_score(y_true, data_scores_matrix[:, 4]), 2)\n",
+    "# data_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([ 0.62,  0.7 ]), array([ 0.76,  0.13]), array([ 0.6 ,  0.61]), array([ 0.68,  0.66])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prec_rec = []\n",
+    "for i in range(4):\n",
+    "    y_score = [0 if x < 0.5 else 1 for x in data_scores_matrix[:, i + 1]]\n",
+    "    prec_rec.append(np.array([\n",
+    "            round(precision_score(y_true, y_score), 2),\n",
+    "            round(recall_score(y_true, y_score), 2)]))\n",
+    "    \n",
+    "print prec_rec"
    ]
   }
  ],
@@ -46,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
