--- a/linear_regression/main.ipynb
+++ b/linear_regression/main.ipynb
@@ -171,11 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ridge(alpha=1, copy_X=True, fit_intercept=True, max_iter=None,\n",
+       "   normalize=False, random_state=241, solver='auto', tol=0.001)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import Ridge\n",
     "\n",
