new examples added

--- a/linear_regression/main.ipynb
+++ b/linear_regression/main.ipynb
@@ -97,15 +97,14 @@
     "\n",
     "data_train['LocationNormalized'].fillna('nan', inplace=True)\n",
     "data_train['ContractTime'].fillna('nan', inplace=True)\n",
-    "\n",
     "data_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -118,18 +117,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1763\n",
+      "3\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(60000, 1766)"
+       "1766"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,15 +144,19 @@
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
     "\n",
+    "# Size of 'LocationNormalized' + 'ContractTime' after one-hot encoding\n",
+    "print len(data_train[['LocationNormalized']].stack().value_counts().index.tolist())\n",
+    "print len(data_train[['ContractTime']].stack().value_counts().index.tolist())\n",
+    "\n",
     "dict_vectorizer = DictVectorizer(sparse=False)\n",
     "X_train_categ = dict_vectorizer.fit_transform(data_train[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
     "X_test_categ = dict_vectorizer.transform(data_test[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
-    "X_train_categ.shape"
+    "len(X_train_categ[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +167,7 @@
        "(60000, 24627)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +194,7 @@
        "   normalize=False, random_state=241, solver='auto', tol=0.001)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +204,65 @@
     "\n",
     "clf = Ridge(alpha=1, random_state=241)\n",
     "clf.fit(X_train, data_train['SalaryNormalized'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FullDescription</th>\n",
+       "      <th>LocationNormalized</th>\n",
+       "      <th>ContractTime</th>\n",
+       "      <th>SalaryNormalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>we currently have a vacancy for an hr project ...</td>\n",
+       "      <td>Milton Keynes</td>\n",
+       "      <td>contract</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a web developer opportunity has arisen with an...</td>\n",
+       "      <td>Manchester</td>\n",
+       "      <td>permanent</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     FullDescription LocationNormalized  \\\n",
+       "0  we currently have a vacancy for an hr project ...      Milton Keynes   \n",
+       "1  a web developer opportunity has arisen with an...         Manchester   \n",
+       "\n",
+       "  ContractTime  SalaryNormalized  \n",
+       "0     contract               NaN  \n",
+       "1    permanent               NaN  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test"
    ]
   },
   {
@@ -214,7 +284,7 @@
     }
    ],
    "source": [
-    "np.round(clf.predict(X_test), 2)33"
+    "np.round(clf.predict(X_test), 2)"
    ]
   }
  ],
