dota2 logreg auc roc improvements

--- a/dota2/main.ipynb
+++ b/dota2/main.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -534,10 +534,10 @@
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.70988396007163623"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,12 +547,12 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "clf2 = LogisticRegression(C=0.1, random_state=241)\n",
-    "scale\n",
-    "x_train_scaled = StandardScaler().fit_transform(X_train)\n",
+    "scaler = StandardScaler()\n",
+    "x_train_scaled = scaler.fit_transform(X_train)\n",
     "# print(x_train_scaled)\n",
     "clf2.fit(x_train_scaled, y_train)\n",
     "\n",
-    "roc_auc_score(y_true=y_test, y_score=clf2.predict_proba(X_test)[:, 1])"
+    "roc_auc_score(y_true=y_test, y_score=clf2.predict_proba(scaler.transform(X_test))[:, 1])"
    ]
   }
  ],
